# gutenberg

exploration/: gpt-morse.ipynb  pyproject.toml
gutenrag/: compose.yaml  exploration.ipynb  pyproject.toml  test.py
gutenrag/gutenrag/: api.py  consts.py  db.py  evaluate.py  generate_testset.py  ingest.py  rag.py
gutenrag/gutenrag/prototype/: db.py  evaluate.py  generate_testset.py  ingest.py  rag.py
