[project]
name = "gutenrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.5",
    "fastapi[standard]>=0.135.3",
    "langchain>=1.2.13",
    "langchain-ollama>=1.0.1",
    "libzim>=3.9.0",
    "ollama>=0.6.1",
    "pgvector>=0.3.6",
    "polars>=1.39.3",
    "psycopg[binary]>=3.2.0",
    "pydantic-ai>=1.76.0",
    "pydantic-graph>=1.76.0",
    "zimscraperlib>=5.2.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["gutenrag"]
